# RemoteOne

./: .replit  ANDROID_BUILD_SUMMARY.md  ANDROID_CONVERSION.md  BUILD_INSTRUCTIONS.md  FileServer.pyz  MOBILE_CONVERSION.md  README_zipapp.txt  RENDER_DEPLOYMENT.md  SETUP.md  app.py  build_cx_freeze.py  build_exe.py  build_msi.py  build_portable.py  build_windows_exe.py  build_zipapp.py  buildozer.spec  deploy_to_render.sh  fileserver.spec  fileserver_windows.spec  kivy_app.py  launcher.py  local_requirements.txt  main.py  main_exe.py  pyproject.toml  render.yaml  render_requirements.txt  replit.md  run_kivy.py  setup_build.py  simple_exe_builder.py  start_server.bat  start_server.sh  utils.py
android_build_package/: BUILD_INSTRUCTIONS.md  QUICK_START.md  buildozer.spec  main.py  requirements.txt
build_simple/: FileServer.spec
static/: manifest.json  sw.js
static/css/: style.css
static/js/: script.js
templates/: files.html  index.html  login.html
uploads/: .gitkeep
